Android: create SafeBrowsingApiHandler with declared constructor
No change to logic.

This uses getDeclaredConstructor() when creating the
SafeBrowsingApiHandler, since this provides more information in case an
exception is thrown.

This resolves an errorprone compile warning.

Test: ninja system_webview_apk (fewer compile warnings)
Change-Id: Icdaf2aadf6fbd16fb298b140f3918b51a5fd2d43
Reviewed-on: https://chromium-review.googlesource.com/780761
Reviewed-by: Varun Khaneja <vakh@chromium.org>
Commit-Queue: Nate Fischer <ntfschr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518397}